--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <div class="topBg">
                 <div id="subpageTitle">
                     <span class="smallTitle">Who is behind "Your Journey North"?</span>
-                    <h1>About us</h1>
+                    <h1>About me</h1>
                 </div>
             </div>
             </div>
@@ -50,20 +50,20 @@
     <div class="divider"></div>
     <div class="contentWrapper">
         <div class="overlapRight">
-            <img src="img/about.jpg" alt="About placeholder">
+            <img src="img/aboutme.png" alt="Me">
             <div>
-                <h2>Who are we?</h2>
+                <h2>Who am I?</h2>
                 <p>The Nordic areas became increasingly popular in recent years, meanwhile the popularity of travel agencies has declined since the 2000s.</p>
-                <p>GoNorth is not a travel agency either. We are a group of locals trying to help individuals, families, groups, hikers, couch surfers planning their Nordic holidays safely.</p>
-                <a href="#" class="buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></a>
+                <p>Your Journey North is not a travel agency either. I am a local, located in Sjælland, Denmark, trying to help individuals, families, groups, hikers, couch surfers planning their Nordic holidays safely.</p>
             </div>
         </div>
-        <h2 class="centered topMargin">Our goal</h2>
-        <p class="P-width900">We wish to make Nordic tourism a safe and delightful experience full of opportunities for both hosts and visitors.</p>
+        <h2 class="centered topMargin">My goal</h2>
+        <p class="P-width900">I wish to make Nordic tourism a safe and delightful experience full of opportunities for both hosts and visitors.</p>
         <h2 class="centered topMargin">How?</h2>
         <p class="P-width900">Two words: planning and informing.</p>
-        <p class="P-width900">Nordic areas are delicate and can be dangerous, therefore we provide practical information about the areas that interest you the most. You get first-hand tips from locals.</p>
-        <p class="P-width900">We also want to help you plan your holiday. Holidays aren't "one size fits all". What was fun for others might not be interesting to you. So why not go ahead and plan your own dream holiday using our database?</p>
+        <p class="P-width900">Nordic areas are delicate and can be dangerous, therefore I aim to provide practical information about the areas that interest you the most. You get first-hand tips from locals, and experienced travellers.</p>
+        <p class="P-width900">I also want to help you plan your holiday. Holidays aren't "one size fits all". What was fun for others might not be interesting to you. So why not go ahead and plan your own dream holiday using this big database of holiday opportunities?</p>
+        <p class="P-width900">You will also find a lot of pre-planned roadtrips on the page. Even though I just said that "holidays aren't one size fits all", they can serve as a great base for inspiration for starters.</p>
         <div class="photoCollage">
             <div>
                 <img src="img/placeholder-yearroundactivity.jpg" alt="Year round activity placeholder">
@@ -71,9 +71,9 @@
             <div>
                 <p class="smallTitle">Be smart</p>
                 <h2>Get good offers</h2>
-                <p> Nordic areas typically a shorter season than other favoured tourist places, which means tourists visit in a shorter period of time. It gets really crowded really quick.</p>
+                <p> Nordic areas typically have a shorter season than other favoured tourist places, which means tourists visit in a shorter period of time. It gets really crowded really quick.</p>
                 <p>But it doesn't have to be.</p>
-                <p>Based on what you want to do, we can find you an out-of-season offer for cheaper.</p>
+                <p>Based on what you want to do, you can be smart and find you an out-of-season offer for cheaper.</p>
                 <p>For example you can visit cities, historical buildings and museums and try local specialties in any season - and get huge discounts and enjoy that there's no crowd.</p>
                 <p>By choosing such an offer, you contribute to solving the problem of overtourism and spread the number of tourists throughout the year - as well as getting yourself a great offer.</p> 
                 </div>
@@ -85,9 +85,9 @@
             </div>
         </div>
         <h2 class="centered topMargin">Disclaimer</h2>
-        <p class="P-width900">GoNorth is not a travel agency, but rather a tool that can complement one.</p>
-        <p class="P-width900">GoNorth is mostly targeted for individuals who seek inspiration or assistance for planning their travels in the Nordic areas.</p>
-        <p class="P-width900">GoNorth does not organize tours, merely presents ideas and provides helpful information.</p>
+        <p class="P-width900">Your Journey North is not a travel agency, but rather a tool that can complement one.</p>
+        <p class="P-width900">Your Journey North is mostly targeted for individuals who seek inspiration or assistance for planning their travels in the Nordic areas.</p>
+        <p class="P-width900">Your Journey North does not organize tours, merely presents ideas and provides helpful information.</p>
     </div>
 </div>
         <div class="bigBg">
@@ -95,20 +95,17 @@
                 <div class="overlayDark">
                     <div class="bigBgContent">
                         <div class="bigBgWrapper1">
-                            <p class="smallTitle">Contact us</p>
+                            <p class="smallTitle">Contact me</p>
                             <h2>Do you have any questions?</h2>
-                            <p>Our staff are happy to help during the local working hours. You can call the offices, or use the form below to contact us.</p>
+                            <p>I'm happy to help you with your trip or general questions about Nordic holidays. However I do not wish to store any personal data about you. Therefore please use one of my social media channels to get in contact with me:</p>
+                            <a href="https://instagram.com/yourjourneynorth" target="_blank" class="buttonWithIcon"><i class="fab fa-instagram"></i> @yourjourneynorth <i class="fas fa-angle-right"></i></a>
                             <div class="iconBox">
-                                    <img src="img/icons/phone2.png" alt="phone">
-                                    <p>Tel.: +1 23 45678</p>
+                                <i class="fab fa-instagram"></i>
+                                    <p>Instagram: @yourjourneynorth</p>
                                 </div>
                                 <div class="iconBox">
-                                    <img src="img/icons/mail.png" alt="mail">
-                                    <p>info@yourjourneynorth.dk</p>
-                                </div>
-                                <div class="iconBox">
-                                    <img src="img/icons/address.png" alt="address">
-                                    <p>Fosenkaia 7,<br>Trondheim<br>Norway</p>
+                                    <i class="fab fa-facebook-square"></i>
+                                    <p>Facebook: Your Journey North</p>
                                 </div>
                             </div>
                             <div class="bigBgWrapper2Left">
